[gd_scene load_steps=8 format=3 uid="uid://ccxy48ld0gno1"]

[ext_resource type="FontFile" uid="uid://beym5dfo74cv0" path="res://scenes/mainmenu/VCR_OSD_MONO_1.001.ttf" id="1_06t4h"]
[ext_resource type="Script" uid="uid://dfqwpg7tv4to5" path="res://scenes/mainmenu/main_menu.gd" id="1_7vrkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.100514, 0.260884, 0.366038, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06t4h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.11689, 0.134855, 0.216135, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 1
shadow_offset = Vector2(1, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(0.0352319, 0.0445863, 0.0875517, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 1
shadow_offset = Vector2(1, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(0.15182, 0.173343, 0.270545, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 1
shadow_offset = Vector2(1, 3)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7vrkn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_right = 1159.0
offset_bottom = 661.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7vrkn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 434.0
offset_right = 302.0
offset_bottom = 630.0
theme_override_constants/separation = 7

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.615686, 0.396078, 0.215686, 1)
theme_override_colors/font_color = Color(0.615133, 0.397776, 0.217245, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 21
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Play"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.615686, 0.396078, 0.215686, 1)
theme_override_colors/font_color = Color(0.615133, 0.397776, 0.217245, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 21
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Options (?)"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.615686, 0.396078, 0.215686, 1)
theme_override_colors/font_color = Color(0.615133, 0.397776, 0.217245, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 21
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Exit
"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 492.0
offset_top = 63.0
offset_right = 1083.0
offset_bottom = 144.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = ExtResource("1_06t4h")
theme_override_font_sizes/font_size = 44
text = "Game Project name here"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_PLAY_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_OPTIONS_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_EXIT_pressed"]
